stuff and things

--- a/client/src/app/home/home/home.component.html
+++ b/client/src/app/home/home/home.component.html
@@ -54,7 +54,7 @@
               <div class="icon"><i class="ion-ios-people"></i></div>
             </div>
             <h2 class="title">
-              <a href="#">{{ "community" | translate }}</a>
+              <a>{{ "community" | translate }}</a>
             </h2>
             <p class="description">
               {{ "community_txt" | translate }}
