--- a/client/src/app/home/home/home.component.scss
+++ b/client/src/app/home/home/home.component.scss
@@ -13,7 +13,7 @@
   font-size: 48px;
   display: inline-block;
   margin-bottom: 10px;
-  color: #10d213;
+  color: $primary-color;
 }
 
 #contact .contact-info address,
@@ -35,7 +35,7 @@
 }
 
 #contact .contact-info a:hover {
-  color: #10d213;
+  color: $primary-color;
 }
 
 #contact .center {
@@ -67,8 +67,8 @@
 }
 
 #contact .form #sendmessage {
-  color: #10d213;
-  border: 1px solid #10d213;
+  color: $primary-color;
+  border: 1px solid $primary-color;
   display: none;
   text-align: center;
   padding: 15px;
@@ -109,7 +109,7 @@
 }
 
 #contact .form button[type="submit"] {
-  background: #10d213;
+  background: $primary-color;
   border: 0;
   padding: 10px 30px;
   color: #fff;
@@ -122,7 +122,7 @@
 }
 
 #emailbtn {
-  background-color: #10d213;
+  background-color: $primary-color;
   border-color: #00c102;
 }
 
@@ -265,12 +265,12 @@
   transition: 0.5s;
   margin: 10px;
   color: #fff;
-  background: #10d213;
+  background: $primary-color;
 }
 
 #intro .btn-get-started:hover {
   background: #000;
-  color: #10d213;
+  color: $primary-color;
 }
 
 .section-bg {
@@ -303,7 +303,7 @@
 }
 
 #featured-services i {
-  color: #10d213;
+  color: $primary-color;
   font-size: 48px;
   /*display: inline-block;*/
   line-height: 1;
@@ -398,7 +398,7 @@
   padding-top: 10px;
   text-align: center;
   position: absolute;
-  background-color: #10d213;
+  background-color: $primary-color;
   border-radius: 50%;
   border: 4px solid #fff;
   left: calc(50% - 32px);
@@ -427,7 +427,7 @@
 }
 
 #about .about-col h2 a:hover {
-  color: #10d213;
+  color: $primary-color;
 }
 
 #about .about-col p {
@@ -459,7 +459,7 @@
 }
 
 #services .icon i {
-  color: #10d213;
+  color: $primary-color;
   font-size: 36px;
   line-height: 1;
   transition: 0.5s;
@@ -478,7 +478,7 @@
 }
 
 #services .box:hover .title a {
-  color: #10d213;
+  color: $primary-color;
 }
 
 #services .description {
@@ -526,8 +526,8 @@
 }
 
 #call-to-action .cta-btn:hover {
-  background: #10d213;
-  border: 2px solid #10d213;
+  background: $primary-color;
+  border: 2px solid $primary-color;
 }
 
 #logo-lan {
@@ -565,7 +565,7 @@
   font-weight: bold;
   font-size: 48px;
   display: block;
-  color: #10d213;
+  color: $primary-color;
 }
 
 #facts .counters p {
@@ -611,7 +611,7 @@
 
 #portfolio #portfolio-flters li:hover,
 #portfolio #portfolio-flters li.filter-active {
-  background: #10d213;
+  background: $primary-color;
   color: #fff;
 }
 
@@ -671,7 +671,7 @@
 
 #portfolio .portfolio-item figure .link-preview:hover,
 #portfolio .portfolio-item figure .link-details:hover {
-  background: #10d213;
+  background: $primary-color;
 }
 
 #portfolio .portfolio-item figure .link-preview:hover i,
@@ -720,7 +720,7 @@
 }
 
 #portfolio .portfolio-item .portfolio-info h4 a:hover {
-  color: #10d213;
+  color: $primary-color;
 }
 
 #portfolio .portfolio-item .portfolio-info p {
@@ -732,121 +732,119 @@
   text-transform: uppercase;
 }
 
-  /*--------------------------------------------------------------
+/*--------------------------------------------------------------
   # Sections
   --------------------------------------------------------------*/
-  /* Sections Header
+/* Sections Header
   --------------------------------*/
-  .section-header h3 {
-    font-size: 32px;
-    color: #111;
-    text-transform: uppercase;
-    text-align: center;
-    font-weight: 700;
-    position: relative;
-    padding-bottom: 15px;
-  }
-  
-  .section-header h3::before {
-    content: '';
-    position: absolute;
-    display: block;
-    width: 120px;
-    height: 1px;
-    background: #ddd;
-    bottom: 1px;
-    left: calc(50% - 60px);
-  }
-  
-  .section-header h3::after {
-    content: '';
-    position: absolute;
-    display: block;
-    width: 40px;
-    height: 3px;
-    background: #10d213;
-    bottom: 0;
-    left: calc(50% - 20px);
-  }
-  
-  .section-header p {
-    text-align: center;
-    padding-bottom: 30px;
-    color: #333;
-  }
+.section-header h3 {
+  font-size: 32px;
+  color: #111;
+  text-transform: uppercase;
+  text-align: center;
+  font-weight: 700;
+  position: relative;
+  padding-bottom: 15px;
+}
 
-  
+.section-header h3::before {
+  content: "";
+  position: absolute;
+  display: block;
+  width: 120px;
+  height: 1px;
+  background: #ddd;
+  bottom: 1px;
+  left: calc(50% - 60px);
+}
+
+.section-header h3::after {
+  content: "";
+  position: absolute;
+  display: block;
+  width: 40px;
+  height: 3px;
+  background: $primary-color;
+  bottom: 0;
+  left: calc(50% - 20px);
+}
+
+.section-header p {
+  text-align: center;
+  padding-bottom: 30px;
+  color: #333;
+}
+
 /*--------------------------------------------------------------
 # Header
 --------------------------------------------------------------*/
-.top-message{
-    text-align: center;
-    margin-bottom: 60px;
-    margin-left: 22%;
-    margin-right: 22%;
-  }
-  
-  #header {
-    padding: 30px 0;
-    height: 92px;
-    position: fixed;
-    left: 0;
-    top: 0;
-    right: 0;
-    transition: all 0.5s;
-    z-index: 997;
-  }
-  
-  #header.header-scrolled {
-    background: rgba(0, 0, 0, 0.9);
-    padding: 20px 0;
-    height: 72px;
-    transition: all 0.5s;
-  }
-  
+.top-message {
+  text-align: center;
+  margin-bottom: 60px;
+  margin-left: 22%;
+  margin-right: 22%;
+}
+
+#header {
+  padding: 30px 0;
+  height: 92px;
+  position: fixed;
+  left: 0;
+  top: 0;
+  right: 0;
+  transition: all 0.5s;
+  z-index: 997;
+}
+
+#header.header-scrolled {
+  background: rgba(0, 0, 0, 0.9);
+  padding: 20px 0;
+  height: 72px;
+  transition: all 0.5s;
+}
+
+#header #logo {
+  float: left;
+}
+
+@media (min-width: 1024px) {
   #header #logo {
-    float: left;
+    padding-left: 60px;
   }
-  
-  @media (min-width: 1024px) {
-    #header #logo {
-      padding-left: 60px;
-    }
-  }
-  
+}
+
+#header #logo h1 {
+  font-size: 34px;
+  margin: 0;
+  padding: 0;
+  line-height: 1;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 700;
+  letter-spacing: 3px;
+}
+
+#header #logo h1 a,
+#header #logo h1 a:hover {
+  color: #fff;
+  padding-left: 10px;
+  padding-top: 5px;
+  border-left: 4px solid $primary-color;
+  font-family: Imagine;
+}
+
+#header #logo img {
+  padding: 0;
+  margin: 0;
+}
+
+@media (max-width: 768px) {
   #header #logo h1 {
-    font-size: 34px;
-    margin: 0;
-    padding: 0;
-    line-height: 1;
-    font-family: "Montserrat", sans-serif;
-    font-weight: 700;
-    letter-spacing: 3px;
+    font-size: 28px;
   }
-  
-  #header #logo h1 a, #header #logo h1 a:hover {
-    color: #fff;
-    padding-left: 10px;
-    padding-top: 5px;
-    border-left: 4px solid #10d213;
-    font-family: Imagine;
-  }
-  
   #header #logo img {
-    padding: 0;
-    margin: 0;
+    max-height: 40px;
   }
-  
-  @media (max-width: 768px) {
-    #header #logo h1 {
-      font-size: 28px;
-    }
-    #header #logo img {
-      max-height: 40px;
-    }
-  }
-  
-  
+}
 
 /* Team Section
   --------------------------------*/
@@ -915,7 +913,7 @@
 }
 
 #team .member .social a:hover {
-  color: #10d213;
+  color: $primary-color;
 }
 
 #team .member .social i {
