--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,11 +1,9 @@
 * {
   margin: 0px;
   font-family: "Open Sans", sans-serif;
-  $primary-color: #10d213;
-  $messenger-color: #0084ff;
-  $discord-color: #7289da;
 }
 
+@import "~styles/colors.scss";
 @import url("https://fonts.googleapis.com/css?family=Ubuntu:400,500");
 @font-face {
   font-family: "Imagine";
@@ -17,4 +15,4 @@
 }
 
 /* Importing Bootstrap SCSS file. */
-@import '~bootstrap/scss/bootstrap';
+@import '~bootstrap/scss/bootstrap.scss';
