Fixed navbar and most of the site style

--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -85,7 +85,7 @@
                 alt=""
                 class="img-fluid"
               />
-              <div class="icon"><i class="ion-arrow-graph-up-right"></i></div>
+              <div class="icon"><i class="ion-trending-up-outline"></i></div>
             </div>
             <h2 class="title">
               <a href="#">{{ "promote" | translate }}</a>
