--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -41,9 +41,8 @@
       <header class="section-header">
         <h3 class="small-title">{{ "mission" | translate }}</h3>
         <p>
-          {{ "mission_txt_1" | translate }} <br class="hidden-mobile" />{{
-            "mission_txt_2" | translate
-          }}
+          {{ "mission_txt_1" | translate }} <br class="hidden-mobile" />
+          {{ "mission_txt_2" | translate }}
         </p>
       </header>
       <div class="row about-cols">
