--- a/src/app/admin/admin.component.scss
+++ b/src/app/admin/admin.component.scss
@@ -1,4 +1,7 @@
 :host {
   display: flex;
-  flex-grow: 1;
+  height: 100vh;
+  width: 100vw;
+  background-color: var(--background-layer-one);
+  color: #fff;
 }
