--- a/src/app/home/home/home.component.scss
+++ b/src/app/home/home/home.component.scss
@@ -1,5 +1,3 @@
-@import "../../../styles/colors.scss";
-
 #contact {
   padding: 60px 0;
 }
@@ -13,7 +11,7 @@
   font-size: 48px;
   display: inline-block;
   margin-bottom: 10px;
-  color: $primary-color;
+  color: var(--primary-color);
 }
 
 #contact .contact-info address,
@@ -35,7 +33,7 @@
 }
 
 #contact .contact-info a:hover {
-  color: $primary-color;
+  color: var(--primary-color);
 }
 
 #contact .center {
@@ -67,8 +65,8 @@
 }
 
 #contact .form #sendmessage {
-  color: $primary-color;
-  border: 1px solid $primary-color;
+  color: var(--primary-color);
+  border: 1px solid var(--primary-color);
   display: none;
   text-align: center;
   padding: 15px;
@@ -109,7 +107,7 @@
 }
 
 #contact .form button[type="submit"] {
-  background: $primary-color;
+  background: var(--primary-color);
   border: 0;
   padding: 10px 30px;
   color: #fff;
@@ -122,7 +120,7 @@
 }
 
 #emailbtn {
-  background-color: $primary-color;
+  background-color: var(--primary-color);
   border-color: #00c102;
 }
 
@@ -257,12 +255,12 @@
   transition: 0.5s;
   margin: 10px;
   color: #fff;
-  background: $primary-color;
+  background: var(--primary-color);
 }
 
 #intro .btn-get-started:hover {
   background: #000;
-  color: $primary-color;
+  color: var(--primary-color);
 }
 
 .section-bg {
@@ -288,7 +286,7 @@
 }
 
 #featured-services i {
-  color: $primary-color;
+  color: var(--primary-color);
   font-size: 48px;
   line-height: 1;
 }
@@ -379,7 +377,7 @@
   padding-top: 10px;
   text-align: center;
   position: absolute;
-  background-color: $primary-color;
+  background-color: var(--primary-color);
   border-radius: 50%;
   border: 4px solid #fff;
   left: calc(50% - 32px);
@@ -408,7 +406,7 @@
 }
 
 #about .about-col h2 a:hover {
-  color: $primary-color;
+  color: var(--primary-color);
 }
 
 #about .about-col p {
@@ -438,7 +436,7 @@
 }
 
 #services .icon i {
-  color: $primary-color;
+  color: var(--primary-color);
   font-size: 36px;
   line-height: 1;
   transition: 0.5s;
@@ -457,7 +455,7 @@
 }
 
 #services .box:hover .title a {
-  color: $primary-color;
+  color: var(--primary-color);
 }
 
 #services .description {
@@ -501,8 +499,8 @@
 }
 
 #call-to-action .cta-btn:hover {
-  background: $primary-color;
-  border: 2px solid $primary-color;
+  background: var(--primary-color);
+  border: 2px solid var(--primary-color);
 }
 
 #logo-lan {
@@ -537,7 +535,7 @@
   font-weight: bold;
   font-size: 48px;
   display: block;
-  color: $primary-color;
+  color: var(--primary-color);
 }
 
 #facts .counters p {
@@ -580,7 +578,7 @@
 
 #portfolio #portfolio-flters li:hover,
 #portfolio #portfolio-flters li.filter-active {
-  background: $primary-color;
+  background: var(--primary-color);
   color: #fff;
 }
 
@@ -640,7 +638,7 @@
 
 #portfolio .portfolio-item figure .link-preview:hover,
 #portfolio .portfolio-item figure .link-details:hover {
-  background: $primary-color;
+  background: var(--primary-color);
 }
 
 #portfolio .portfolio-item figure .link-preview:hover i,
@@ -689,7 +687,7 @@
 }
 
 #portfolio .portfolio-item .portfolio-info h4 a:hover {
-  color: $primary-color;
+  color: var(--primary-color);
 }
 
 #portfolio .portfolio-item .portfolio-info p {
@@ -728,7 +726,7 @@
   display: block;
   width: 40px;
   height: 3px;
-  background: $primary-color;
+  background: var(--primary-color);
   bottom: 0;
   left: calc(50% - 20px);
 }
@@ -811,7 +809,7 @@
 }
 
 #team .member .social a:hover {
-  color: $primary-color;
+  color: var(--primary-color);
 }
 
 #team .member .social i {
