--- a/src/app/home/nav/nav.component.scss
+++ b/src/app/home/nav/nav.component.scss
@@ -1,5 +1,3 @@
-@import "../../../styles/colors.scss";
-
 #header {
   padding: 30px 0;
   height: 92px;
@@ -36,7 +34,7 @@
   color: #fff;
   padding-left: 10px;
   padding-top: 5px;
-  border-left: 4px solid $primary-color;
+  border-left: 4px solid var(--primary-color);
   font-family: Imagine;
 }
 
