--- a/src/app/home/footer/footer.component.scss
+++ b/src/app/home/footer/footer.component.scss
@@ -2,7 +2,6 @@
 	background: #000;
 	padding: 0 0 30px 0;
 	color: #eee;
-	font-size: 14px;
 }
 
 #footer .footer-top {
@@ -14,45 +13,33 @@
 	margin-bottom: 30px;
 }
 
-#footer .footer-top .footer-info h3 {
-	font-size: 34px;
-	margin: 0 0 20px 0;
-	padding: 2px 0 2px 10px;
-	line-height: 1;
-	font-weight: 700;
-	letter-spacing: 3px;
-	border-left: 4px solid #10d22d;
-}
-
 #footer .footer-top .footer-info p {
-	font-size: 14px;
 	line-height: 24px;
 	margin-bottom: 0;
 	color: #eee;
 }
 
+#footer .footer-top .social-links{
+	display: flex;
+	gap : 16px;
+	margin-top: 16px;
+}
+
 #footer .footer-top .social-links a {
-	font-size: 18px;
-	display: inline-block;
+	display: grid;
+	place-items: center;
 	background: #333;
-	color: #eee;
-	line-height: 1;
-	padding: 8px 0;
-	margin-right: 4px;
 	border-radius: 50%;
-	text-align: center;
 	width: 36px;
 	height: 36px;
 	transition: 0.3s;
 }
 
 #footer .footer-top .social-links a:hover {
-	background: #10d213;
-	color: #fff;
+	text-decoration: none;
 }
 
 #footer .footer-top h4 {
-	font-size: 14px;
 	font-weight: bold;
 	color: #fff;
 	text-transform: uppercase;
@@ -89,26 +76,27 @@
 	margin: 0;
 }
 
-#footer .footer-top .footer-links ul i {
+#footer .footer-top .footer-links ul em {
 	padding-right: 8px;
 	color: #ddd;
 }
 
 #footer .footer-top .footer-links ul li {
-	border-bottom: 1px solid #333;
-	padding: 10px 0;
+	border-bottom: 1px solid #eee;
+	padding: 8px 0;
+	font-weight: 700;
 }
 
 #footer .footer-top .footer-links ul li:first-child {
 	padding-top: 0;
 }
 
-#footer .footer-top .footer-links ul a {
+#footer .footer-top .footer-links ul li a {
 	color: #eee;
 }
 
 #footer .footer-top .footer-links ul a:hover {
-	color: #10d213;
+	color: var(--primary-color);
 }
 
 #footer .footer-top .footer-contact {
@@ -116,11 +104,19 @@
 }
 
 #footer .footer-top .footer-contact p {
-	line-height: 26px;
+	margin-top: 16px;
+}
+
+#footer .footer-top .footer-contact a {
+	color: var(--primary-color);
 }
 
 #footer .footer-top .footer-newsletter {
 	margin-bottom: 30px;
+}
+
+#footer .footer-top .footer-newsletter p {
+	margin-top: 16px;
 }
 
 #footer .footer-top .footer-newsletter input[type="email"] {
@@ -151,7 +147,6 @@
 
 #footer .credits {
 	text-align: center;
-	font-size: 13px;
 	color: #ddd;
 }
 
